compiler/test-data/parser/errors/contract/missing_contract_name.frel
module test

contract {
    get_data() : String
}
